<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_newevent"
        android:icon="@drawable/ic_addevent"
        android:showAsAction="always"
        android:title="@string/menu_newevent"/>
    <item
        android:id="@+id/action_notifications"
        android:icon="@drawable/ic_notifications"
        android:showAsAction="always"
        android:title="@string/menu_notifications"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="never"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_menu_manage"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/action_signout"
        android:showAsAction="never"
        android:title="@string/menu_signout"/>

</menu>