<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_search"/>
    -->

    <item
        android:id="@+id/action_addcontact"
        android:icon="@drawable/ic_menu_invite"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_addcontact"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_help"/>

</menu>