<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <CheckBox
        android:id="@+id/quickaction_watch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/background_button_eventaction"
        android:button="@drawable/ic_quickaction_watch"
        android:text="@string/watch" />

    <Button
        android:id="@+id/quickaction_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/background_button_eventaction"
        android:drawableLeft="@drawable/ic_quickaction_text"
        android:drawableStart="@drawable/ic_quickaction_text"
        android:text="@string/text_host" />

    <CheckBox
        android:id="@+id/quickaction_join"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/background_button_eventaction"
        android:button="@drawable/ic_quickaction_join"
        android:text="@string/join" />

</LinearLayout>