<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/email_address_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_edittext_signup"
            android:hint="@string/example_email"
            android:inputType="textEmailAddress"
            android:minWidth="250dp"
            android:padding="3dp" />

        <TextView
            android:id="@+id/email_input_directions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/email_address_input"
            android:layout_below="@id/email_address_input"
            android:text="@string/enter_email_hint" />

        <EditText
            android:id="@+id/gaccount_password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_below="@id/email_input_directions"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_edittext_signup"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minWidth="250dp"
            android:padding="3dp" />

        <Button
            android:id="@+id/login_button"
            style="@style/white_black_txt14sp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/gaccount_password_input"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_button_signin"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/sign_in" />

        <CheckBox
            android:id="@+id/remember_me_checkbox"
            android:checked="true"
            android:text="@string/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/login_button"
            android:layout_below="@id/login_button"
            android:layout_marginTop="4dp" />
    </RelativeLayout>

</ScrollView>